# Lab_2.16

./: .gitignore  README.md  pyproject.toml
program/: ind.py  prim.py
