[tool.poetry]
name = "lab-2-16"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lab_2"}]

[tool.poetry.dependencies]
python = "^3.12"
jsonschema = "^4.21.1"
black = "^24.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80